Split out data into separate repos
